--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
+    <!-- Class=row para un ancho determinado. También para crear una fila nueva de elementos -->
+    <div class="row">
+        <!-- Class=large-12 es un formato anchodispositivo-numerodecolumnas recordar que un 100% del ancho disponible son 12 columnas -->
+        <!-- El dispositivo puede ser small, medium, large, xlarge, xxlarge -->
+        <!-- Numero de columnas del 1 al 12 -->
+        <!-- Añadir clase columns para que sea entendible que son columnas -->
+        <div class="large-12 columns">
+        </div>
+    </div>
 
     <!-- Introducir jQuery -->
     <script src="js/vendor/jquery.js"></script>
