index con contenido

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <!-- Numero de columnas del 1 al 12 -->
         <!-- Añadir clase columns para que sea entendible que son columnas -->
         <div class="large-12 columns">
+            <h1>Introducir contenido aquí</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius doloribus quos officia voluptatum odit reprehenderit nisi nam voluptatem accusantium pariatur? Totam quod ducimus, quam molestiae ea quaerat nam cupiditate eveniet.</p>
         </div>
     </div>
 
